--- a/src/app/main-page/main-page.page.html
+++ b/src/app/main-page/main-page.page.html
@@ -1,14 +1,15 @@
-<!-- app.component.html --><ion-header>
+<ion-header>
   <ion-toolbar > 
     <button mat-icon-button  class="example-icon" aria-label="Example icon-button with menu icon" (click)="drawer.toggle()">
       <mat-icon>menu</mat-icon>
     </button>
-    <span >My App</span>
+    <span>{{ selectedPageName }}</span>
+    <span *ngIf="loggedInUser" slot="end" style="padding: 10px;"> {{ loggedInUser }}</span>
+    <!-- <button slot="end" style="padding: 10px;">
+    <mat-icon>logout</mat-icon>
+    </button> -->
   </ion-toolbar>
 </ion-header>
-
-
-
 
 <mat-drawer-container class="example-container" [hasBackdrop]="true">
   <mat-drawer #drawer mode="over">
