--- a/src/app/main-page/main-page.page.scss
+++ b/src/app/main-page/main-page.page.scss
@@ -21,3 +21,11 @@
     width: 20px;
     margin-right: 10px;
   }
+
+  .icon{
+
+    height: 20px;
+    width: 20px;
+    margin-right: 10px;
+
+  }
