--- a/src/app/heirarchymanagemnet/heirarchymanagemnet.component.html
+++ b/src/app/heirarchymanagemnet/heirarchymanagemnet.component.html
@@ -1,48 +1,105 @@
 
-<ion-content [fullscreen]="true">
+    <ion-header>
 
-<div id="tree-list-demo"  style="padding: 20px;">
-            <dx-tree-list
-              id="tasks"
-              [dataSource]="tasksData"
-              keyExpr="Task_ID"
-              parentIdExpr="Task_Parent_ID"
-              [showRowLines]="true"
-              [showBorders]="true"
-              [allowSorting]="true"
-              [columnAutoWidth]="true"
-              [rowAlternationEnabled]="true"
-              [allowColumnResizing]="true"
-              [showBorders]="true"
-              (onRowInserted)="onRowInserted($event)"
-              (onRowRemoving)="onrowdeleted($event)"
-              [customizeColumns]="customizeColumns"
-            >
-            <dxo-templates  style="text-align: center !important; ">
-              <div *dxTemplate="let data of 'customCellTemplategroups'"  style="text-align: center;">
-                  <mat-icon (click)="openDialogroup(data)">list</mat-icon>
-              </div>
-          </dxo-templates>
 
-          <dxo-templates  style="text-align: center !important; ">
-            <div *dxTemplate="let data of 'customCellTemplateusers'"  style="text-align: center;">
-                <mat-icon (click)="openDialousers(data)">list</mat-icon>
-            </div>
-        </dxo-templates>
+      <ion-segment  [(ngModel)]="selectedSegment" (ionChange)="SelectSegment($event)">
 
-      <dxi-column dataField="id" [Width]="150" [visible]="false"></dxi-column>
-    
-      <dxi-column dataField="levels" [alignment]="'left'"> 
-        <dxi-validation-rule type="required" ></dxi-validation-rule>
-      </dxi-column>  
-      <dxo-editing
-        mode="cell"
-        [allowAdding]="ShowHierarchyAccess"
-        [allowUpdating]="ShowHierarchyAccess"
-        [allowDeleting]="ShowHierarchyAccess"
-        [useIcons]="true"
-      >
-      </dxo-editing>
+        <ion-segment-button value="structure">
+          <ion-label>Level Structure</ion-label>
+        </ion-segment-button>
+
+        <ion-segment-button value="details">
+          <ion-label>Level Details</ion-label>
+        </ion-segment-button>
+
+      </ion-segment>
+    </ion-header>
+
+
+    <ion-content [fullscreen]="true">
+      <ng-container *ngIf="selectedSegment === 'structure'"> 
+
+        <div id="tree-list-demo"  style="padding: 20px;">
+                    <dx-tree-list
+                      id="tasks"
+                      [dataSource]="tasksData"
+                      keyExpr="Task_ID"
+                      parentIdExpr="Task_Parent_ID"
+                      [showRowLines]="true"
+                      [showBorders]="true"
+                      [allowSorting]="true"
+                      [columnAutoWidth]="true"
+                      [rowAlternationEnabled]="true"
+                      [allowColumnResizing]="true"
+                      [showBorders]="true"
+                      (onRowInserted)="onRowInserted($event)"
+                      (onRowRemoving)="onrowdeleted($event)"
+                    >
+                  
+            
+              <dxi-column dataField="levels" [alignment]="'left'"> 
+                <dxi-validation-rule type="required" ></dxi-validation-rule>
+              </dxi-column>  
+              <dxo-editing
+                mode="cell"
+                [allowAdding]="ShowHierarchyAccess"
+                [allowUpdating]="ShowHierarchyAccess"
+                [allowDeleting]="ShowHierarchyAccess"
+                [useIcons]="true"
+              >
+              </dxo-editing>
+            </dx-tree-list>
+          </div>
+
+    </ng-container>
+
+    <ng-container *ngIf="selectedSegment === 'details'"> 
+
+      <div id="tree-list-demo"  style="padding: 20px;">
+        <dx-tree-list
+          id="tasks"
+          [dataSource]="tasksData"
+          keyExpr="Task_ID"
+          parentIdExpr="Task_Parent_ID"
+          [showRowLines]="true"
+          [showBorders]="true"
+          [allowSorting]="true"
+          [columnAutoWidth]="true"
+          [rowAlternationEnabled]="true"
+          [allowColumnResizing]="true"
+          [showBorders]="true"
+          (onRowInserted)="onRowInserted($event)"
+          (onRowRemoving)="onrowdeleted($event)"
+          [customizeColumns]="customizeColumns"
+        >
+        <dxo-templates  style="text-align: center !important; ">
+          <div *dxTemplate="let data of 'customCellTemplategroups'"  style="text-align: center;">
+              <mat-icon (click)="openDialogroup(data)">list</mat-icon>
+          </div>
+      </dxo-templates>
+
+      <dxo-templates  style="text-align: center !important; ">
+        <div *dxTemplate="let data of 'customCellTemplateusers'"  style="text-align: center;">
+            <mat-icon (click)="openDialousers(data)">list</mat-icon>
+        </div>
+    </dxo-templates>
+
+    <dxi-column dataField="id" [Width]="150" [visible]="false"></dxi-column>
+
+    <dxi-column dataField="levels" [alignment]="'left'"> 
+    <dxi-validation-rule type="required" ></dxi-validation-rule>
+    </dxi-column>  
+    <dxo-editing
+    mode="cell"
+    [allowAdding]="ShowHierarchyAccess"
+    [allowUpdating]="ShowHierarchyAccess"
+    [allowDeleting]="ShowHierarchyAccess"
+    [useIcons]="true"
+    >
+    </dxo-editing>
     </dx-tree-list>
-  </div>
+    </div>
+
+    </ng-container>
+
 </ion-content>
