--- a/src/app/levelassignedgroups/levelassignedgroups.page.html
+++ b/src/app/levelassignedgroups/levelassignedgroups.page.html
@@ -1,7 +1,14 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>Level Name:<p style="display: inline; font-size: 15px;">{{ data.levels }}</p></ion-title>
-
+    <ion-title>
+      <span class="title-text">Assigned Groups</span>
+      <span class="group-name">({{ data.levels }})</span>
+    </ion-title>   
+     <ion-buttons slot="end">
+      <ion-button (click)="dismiss()">
+        <ion-icon name="close"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
