--- a/src/app/levelassigneduser/levelassigneduser.page.html
+++ b/src/app/levelassigneduser/levelassigneduser.page.html
@@ -1,6 +1,14 @@
     <ion-header [translucent]="true">
       <ion-toolbar>
-        <ion-title>{{ data.levels }}</ion-title>
+        <ion-title>
+          <span class="title-text">Assigned Users</span>
+          <span class="group-name">({{ data.levels }})</span>
+        </ion-title>  
+                <ion-buttons slot="end">
+          <ion-button (click)="dismiss()">
+            <ion-icon name="close"></ion-icon>
+          </ion-button>
+        </ion-buttons>
       </ion-toolbar>
     </ion-header>
 
