--- a/src/app/usermodel/usermodel.page.html
+++ b/src/app/usermodel/usermodel.page.html
@@ -1,11 +1,19 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title > {{ data.groupname }}</ion-title>
+    <ion-title>
+      <span class="title-text">Assigned Users</span>
+      <span class="group-name">({{ data.groupname }})</span>
+    </ion-title>
+        <ion-buttons slot="end">
+      <ion-button (click)="dismiss()">
+        <ion-icon name="close"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
  
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" >
 
       <dx-data-grid
       class="grid"
