--- a/src/global.scss
+++ b/src/global.scss
@@ -172,3 +172,18 @@ border: 1px solid red;
 
   padding: 10px;
 }
+
+
+.dx-treelist-revert-tooltip .dx-revert-button>.dx-button-content {
+  padding: 6.5px;
+  margin-right: -5px;
+}
+
+.title-text {
+  font-size: 20px; /* Adjust the font size for the title text */
+  margin-right: 10px; /* Add margin to create space between the title text and group name */
+}
+
+.group-name {
+  font-size: 16px; /* Adjust the font size for the group name */
+}
