--- a/src/app/levelassignedgroups/levelassignedgroups.page.html
+++ b/src/app/levelassignedgroups/levelassignedgroups.page.html
@@ -1,8 +1,9 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      <span class="title-text">Assigned Groups</span>
-      <span class="group-name">({{ data.levels }})</span>
+   
+      <span class="title-text">Assigned Groups : {{ data.levels }}</span>
+
     </ion-title>   
      <ion-buttons slot="end">
       <ion-button (click)="dismiss()">
