--- a/src/app/main-page/main-page.page.scss
+++ b/src/app/main-page/main-page.page.scss
@@ -29,3 +29,11 @@
     margin-right: 10px;
 
   }
+
+  .toolbar-title-container {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
