--- a/src/app/usermodel/usermodel.page.html
+++ b/src/app/usermodel/usermodel.page.html
@@ -1,8 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      <span class="title-text">Assigned Users</span>
-      <span class="group-name">({{ data.groupname }})</span>
+      <span class="title-text">Assigned Users : {{ data.groupname }}</span>
     </ion-title>
         <ion-buttons slot="end">
       <ion-button (click)="dismiss()">
