--- a/src/app/heirarchymanagemnet/heirarchymanagemnet.component.html
+++ b/src/app/heirarchymanagemnet/heirarchymanagemnet.component.html
@@ -1,7 +1,11 @@
 
     <ion-header>
 
-
+      <ion-toolbar color="medium">
+        <ion-title style="color: #000;" >
+      Level  Management
+      </ion-title>
+      </ion-toolbar>
       <ion-segment  [(ngModel)]="selectedSegment" (ionChange)="SelectSegment($event)">
 
         <ion-segment-button value="structure">
