--- a/src/app/levelassigneduser/levelassigneduser.page.html
+++ b/src/app/levelassigneduser/levelassigneduser.page.html
@@ -1,8 +1,7 @@
     <ion-header [translucent]="true">
       <ion-toolbar>
         <ion-title>
-          <span class="title-text">Assigned Users</span>
-          <span class="group-name">({{ data.levels }})</span>
+          <span class="title-text">Assigned Users : {{ data.levels }}</span>
         </ion-title>  
                 <ion-buttons slot="end">
           <ion-button (click)="dismiss()">
