--- a/src/app/main-page/main-page.page.html
+++ b/src/app/main-page/main-page.page.html
@@ -1,13 +1,15 @@
 <ion-header>
-  <ion-toolbar > 
-    <button mat-icon-button  class="example-icon" aria-label="Example icon-button with menu icon" (click)="drawer.toggle()">
+  <ion-toolbar  class="toolbar-title-container">
+    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon" (click)="drawer.toggle()">
       <mat-icon>menu</mat-icon>
     </button>
     <span>{{ selectedPageName }}</span>
-    <span *ngIf="loggedInUser" slot="end" style="padding: 10px;"> {{ loggedInUser }}</span>
-  
+    <span *ngIf="loggedInUser" slot="end" style="padding: 10px;">{{ loggedInUser }}</span>
+    
+      <ion-title    style="margin-left: 40%; margin-top: -3%;  font-weight: bold; " >{{ storedProjectTitle }}</ion-title>
   </ion-toolbar>
 </ion-header>
+
 
 <mat-drawer-container class="example-container" [hasBackdrop]="true">
   <mat-drawer #drawer mode="over">
