--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -2,20 +2,25 @@
   <mat-card class="custom-card">
     <mat-card-content>
 
-      <div class="form">
+      <!-- <div class="form">
         <div class="dx-fieldset">
           <div class="dx-field">
-            <div class="dx-field-label">Title Name</div>
+            <div class="dx-field-label">Title Name:</div>
             <div class="dx-field-value">
               <dx-text-box
-                value=""
                 [inputAttr]="{ 'aria-label': 'Name' }"
                 placeholder="enter here..."
               ></dx-text-box>
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
+    
+      <ion-item>
+        <ion-label position="floating">Enter Project Title</ion-label>
+        <ion-input type="text" [(ngModel)]="projectTitle"></ion-input>
+      </ion-item>
+      
     </mat-card-content>
 
     <mat-card-actions class="centered-actions">
