--- a/src/app/levelviewusers/levelviewusers.page.html
+++ b/src/app/levelviewusers/levelviewusers.page.html
@@ -11,7 +11,7 @@
   </ion-toolbar>
 </ion-header>
 
-`<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true">
       <dx-data-grid
       [dataSource]="storedData1"
       [showBorders]="true"
@@ -22,22 +22,7 @@
       [allowColumnResizing]="true"
       (onRowInserted)="onRowInserting($event)"
     >
-    <dxi-column dataField="levels" caption="Level"  editCellTemplate="levelnames">
-
-      <div *dxTemplate="let cellInfo of 'levelnames'">
-        <dx-tag-box [dataSource]="levelsss" 
-                    [showSelectionControls]="true"
-                    [showMultiTagOnly]="false" 
-                    [searchEnabled]="true"
-                    [multiline]="true"
-                    (onValueChanged)="onValueChanged($event)"
-                    (onRowRemoving)="onRowDeleted($event)"
-
-                    >
-        </dx-tag-box>
-    </div>
-
-    </dxi-column>
+  
     <dxi-column dataField="Access" caption="Access Level" editCellTemplate="accesuserselect">
       <div *dxTemplate="let cellInfo of 'accesuserselect'">
         <dx-select-box  [dataSource]="accessallonly"
@@ -46,7 +31,21 @@
         </dx-select-box>
     </div>
   </dxi-column>
+  <dxi-column dataField="levels" caption="Level"  editCellTemplate="levelnames">
 
+    <div *dxTemplate="let cellInfo of 'levelnames'">
+      <dx-tag-box [dataSource]="levelsss" 
+                  [showSelectionControls]="true"
+                  [showMultiTagOnly]="false" 
+                  [searchEnabled]="true"
+                  [multiline]="true"
+                  (onValueChanged)="onValueChanged($event)"
+                  (onRowRemoving)="onRowDeleted($event)"
+                  >
+      </dx-tag-box>
+  </div>
+
+  </dxi-column>
 
       <dxo-editing
               mode="row"
