--- a/src/app/usermanagementcomp/usermanagementcomp.component.html
+++ b/src/app/usermanagementcomp/usermanagementcomp.component.html
@@ -43,7 +43,7 @@
           [allowColumnResizing]="true"
           (onInitNewRow)="onInitRowForGroupTable($event)"
           (onRowInserted)="onRowInsertedForGroupTable($event)"
-          (onRowUpdating)="onRowUpdatingForGroupTable($event)"
+          (onRowUpdated)="onRowUpdatingForGroupTable($event)"
           (onRowRemoving)="onRowRemovingForGroupTable($event)"
           [customizeColumns]="customizeColumns"
           (onCellClick)="onCellClick($event)"
