--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -2,19 +2,7 @@
   <mat-card class="custom-card">
     <mat-card-content>
 
-      <!-- <div class="form">
-        <div class="dx-fieldset">
-          <div class="dx-field">
-            <div class="dx-field-label">Title Name:</div>
-            <div class="dx-field-value">
-              <dx-text-box
-                [inputAttr]="{ 'aria-label': 'Name' }"
-                placeholder="enter here..."
-              ></dx-text-box>
-            </div>
-          </div>
-        </div>
-      </div> -->
+     
     
       <ion-item>
         <ion-label position="floating">Enter Project Title</ion-label>
@@ -25,7 +13,7 @@
 
     <mat-card-actions class="centered-actions">
       <button mat-button class="mat-green-theme" (click)="saveTitle()">Save</button>
-      <button mat-button class="mat-red-theme">Cancel </button>
+      <button mat-button class="mat-red-theme" (click)="cancel()">Cancel </button>
     </mat-card-actions>
     
   </mat-card>
