--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -83,3 +83,12 @@ mat-drawer-content {
 .mat-drawer {
   width: 250px; /* You can set the width as needed */
 }
+
+
+.icon{
+  cursor: pointer; 
+  margin-left: 8px;
+  color: white !important;
+  position: relative; top: -8.5px;
+
+}
