--- a/src/app/heirarchymanagemnet/heirarchymanagemnet.component.html
+++ b/src/app/heirarchymanagemnet/heirarchymanagemnet.component.html
@@ -1,7 +1,7 @@
 
     <ion-header>
 
-      <ion-toolbar color="medium">
+      <ion-toolbar color="light">
         <ion-title style="color: #000;" >
       Level  Management
       </ion-title>
@@ -87,6 +87,20 @@
             <mat-icon (click)="openDialousers(data)">list</mat-icon>
         </div>
     </dxo-templates>
+
+    <dxo-templates  style="text-align: center !important; ">
+      <div *dxTemplate="let data of 'customCellTemplatereports'"  style="text-align: center;">
+          <mat-icon (click)="openDialoreports(data)">list</mat-icon>
+      </div>
+  </dxo-templates>
+
+
+  <dxo-templates  style="text-align: center !important; ">
+    <div *dxTemplate="let data of 'customCellTemplatepages'"  style="text-align: center;">
+        <mat-icon (click)="openDialopages(data)">list</mat-icon>
+    </div>
+</dxo-templates>
+
 
     <dxi-column dataField="id" [Width]="150" [visible]="false"></dxi-column>
 
