--- a/src/app/main-page/main-page.page.html
+++ b/src/app/main-page/main-page.page.html
@@ -1,25 +1,39 @@
 <ion-header>
   <ion-toolbar  class="toolbar-title-container">
     <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon" (click)="drawer.toggle()">
-      <mat-icon>menu</mat-icon>
+      <mat-icon style="">menu</mat-icon>
     </button>
     <span>{{ selectedPageName }}</span>
     <span *ngIf="loggedInUser" slot="end" style="padding: 10px;">{{ loggedInUser }}</span>
-      <ion-title style="margin-left: 40%; margin-top: -3%;  font-weight: bold; " >{{ storedProjectTitle }}</ion-title>
+      <ion-title  class="tittle">{{ storedProjectTitle }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 
-<mat-drawer-container class="example-container" [hasBackdrop]="true">
-  <mat-drawer #drawer mode="over">
-    <mat-nav-list>
-      <a mat-list-item *ngFor="let link of list" [routerLink]="link.url" routerLinkActive="active" (click)="drawer.close()">
-       <img src="assets/icon/{{link.icon}}" class="icon">
-        {{ link.name }}
-      </a>
-    </mat-nav-list>
-  </mat-drawer>
-  <mat-drawer-content>
-    <ion-router-outlet></ion-router-outlet>
-  </mat-drawer-content>
-</mat-drawer-container>
+<ion-content >
+  <mat-drawer-container class="example-container" [hasBackdrop]="true">
+    <mat-drawer #drawer mode="over">
+      <mat-nav-list>
+        <a mat-list-item *ngFor="let link of list" [routerLink]="link.url" routerLinkActive="active" (click)="drawer.close()">
+         <img src="assets/icon/{{link.icon}}" class="icon">
+          {{ link.name }}
+        </a>
+      </mat-nav-list>
+    </mat-drawer>
+    <mat-drawer-content>
+      <ion-router-outlet></ion-router-outlet>
+    </mat-drawer-content>
+  </mat-drawer-container>
+
+</ion-content>
+
+
+
+<ion-footer class="custom-footer">
+  <ion-title slot="end" class="marquee" style="font-size: 15px; margin: 4px;">
+    <img src="assets/logo.jpg" alt="Your Image" style="vertical-align: middle; margin-left: 10px; height: 17px; margin-right: 10px;"> <!-- Adjust styling and height as needed -->
+    <span class="white-text">Copyright© 2021-2022 </span>
+    <a><span> Supra Controls Private Limited.</span> </a>
+    <span class="white-text">All rights reserved.</span>
+  </ion-title>
+</ion-footer>
