--- a/src/app/usermanagementcomp/usermanagementcomp.component.html
+++ b/src/app/usermanagementcomp/usermanagementcomp.component.html
@@ -1,35 +1,36 @@
 
 
         <ion-header>
-        <ion-toolbar color="medium">
+        <ion-toolbar color="light">
           <ion-title style="color: #000;" >
             User Management
         </ion-title>
         </ion-toolbar>
 
-          <ion-segment  [(ngModel)]="selectedSegment" (ionChange)="SelectSegment($event)">
-
-            <ion-segment-button value="group">
-              <ion-label>Group</ion-label>
-            </ion-segment-button>
-
-            <ion-segment-button value="groupaccess">
-              <ion-label>Group Access</ion-label>
-            </ion-segment-button>
-
-            <ion-segment-button value="user">
-              <ion-label>user</ion-label>
-            </ion-segment-button>
-
-            <ion-segment-button value="access">
-              <ion-label>User Access</ion-label>
-            </ion-segment-button>
-
-          </ion-segment>
+      
         </ion-header>
 
 
     <ion-content [fullscreen]="true">
+      <ion-segment  [(ngModel)]="selectedSegment" (ionChange)="SelectSegment($event)">
+
+        <ion-segment-button value="group">
+          <ion-label>Group</ion-label>
+        </ion-segment-button>
+
+        <ion-segment-button value="groupaccess">
+          <ion-label>Group Access</ion-label>
+        </ion-segment-button>
+
+        <ion-segment-button value="user">
+          <ion-label>user</ion-label>
+        </ion-segment-button>
+
+        <ion-segment-button value="access">
+          <ion-label>User Access</ion-label>
+        </ion-segment-button>
+
+      </ion-segment>
 
         <ng-container *ngIf="selectedSegment === 'group'"> 
           <dx-data-grid
@@ -263,6 +264,7 @@
       
             <dxi-item dataField="password">
             <dxi-validation-rule type="required" message="Password is required" ></dxi-validation-rule>
+            <dxi-validation-rule type="pattern" pattern="^[a-zA-Z0-9]*$" message="Password must contain only letters and numbers"></dxi-validation-rule>
           </dxi-item>
 
           <dxi-item dataField="mobilenumber" caption="Mobile Number" [width]="150" [dataType]="'number'">
